# search-visualiser-wasm

./: .gitignore  Cargo.toml  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
app/: globals.css  layout.tsx  manifest.ts  page.tsx
components/: InputNumber.tsx  SearchAlgorithmSelector.tsx  Title.tsx
src/: lib.rs
