[package]
name = "sorting-visualiser-wasm"
version = "0.1.0"
authors = ["Jarred Jenkins"]
description = "Introductory project to wasm using rust. Visualise some sorting algorithms."
license = "MIT/Apache-2.0"
repository = "https://github.com/jerdbeenbo/sorting-visualiser-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"